User dropwdown extra padding fixed on settings page

--- a/components/tools/OmeroWeb/omeroweb/webclient/static/webclient/css/dusty.css
+++ b/components/tools/OmeroWeb/omeroweb/webclient/static/webclient/css/dusty.css
@@ -480,7 +480,7 @@ button::-moz-focus-inner {
 
 	
 	.standard_form {
-		overflow:hidden;
+		overflow:visible;
 	}
 	
 	
