--- a/components/tools/OmeroWeb/omeroweb/webclient/static/webclient/css/layout.css
+++ b/components/tools/OmeroWeb/omeroweb/webclient/static/webclient/css/layout.css
@@ -189,15 +189,15 @@
 	    #left_panel_tab_list, .left_panel_top{
 			background:#B8C2CC; /* Old browsers */
 			background:hsl(210,10%,80%);
-			background-image:-moz-linear-gradient(top, rgba(255,255,255,.4) 0%, rgba(255,255,255,.1) 100%); /* FF3.6+ */
-			background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,.4)), color-stop(100%,rgba(255,255,255,.1))); /* Chrome,Safari4+ */
-			background-image:-webkit-linear-gradient(top, rgba(255,255,255,.4) 0%,rgba(255,255,255,.1) 100%); /* Chrome10+,Safari5.1+ */
-			background-image:-o-linear-gradient(top, rgba(255,255,255,.4) 0%,rgba(255,255,255,.1) 100%); /* Opera11.10+ */
-			background-image:-ms-linear-gradient(top, rgba(255,255,255,.4) 0%,rgba(255,255,255,.1) 100%); /* IE10+ */
+			background-image:-moz-linear-gradient(top, rgba(255,255,255,.7) 0%, rgba(255,255,255,.1) 100%); /* FF3.6+ */
+			background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,.7)), color-stop(100%,rgba(255,255,255,.1))); /* Chrome,Safari4+ */
+			background-image:-webkit-linear-gradient(top, rgba(255,255,255,.7) 0%,rgba(255,255,255,.1) 100%); /* Chrome10+,Safari5.1+ */
+			background-image:-o-linear-gradient(top, rgba(255,255,255,.7) 0%,rgba(255,255,255,.1) 100%); /* Opera11.10+ */
+			background-image:-ms-linear-gradient(top, rgba(255,255,255,.7) 0%,rgba(255,255,255,.1) 100%); /* IE10+ */
 			
 			filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#DDE1E4', endColorstr='#CCD2D6',GradientType=0 ); /* IE6-9 */
 			
-			background:linear-gradient(top, rgba(255,255,255,.4) 0%,rgba(255,255,255,.1) 100%); /* W3C */ 
+			background:linear-gradient(top, rgba(255,255,255,.7) 0%,rgba(255,255,255,.1) 100%); /* W3C */ 
 			-webkit-box-shadow:0 1px 0 0 rgba(255,255,255,0.05), inset 0 1px 0 rgba(255,255,255,.05); /* Saf3.0+, Chrome */
 			   -moz-box-shadow:0 1px 0 0 rgba(255,255,255,0.05), inset 0 1px 0 rgba(255,255,255,.05); /* FF3.5+ */
 			        box-shadow:0 1px 0 0 rgba(255,255,255,0.05), inset 0 1px 0 rgba(255,255,255,.05); /* Opera 10.5, IE 9.0 */
